# Python-practice

./: pyproject.toml
scripts/: watch.py
