[tool.poetry]
name = "python-training"
version = "0.1.0"
description = ""
authors = ["Mathieuka <mathieu.kahlaoui.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
